<resources>
    <string name="app_name">口袋图鉴</string>
    <string name="weight">体重</string>
    <string name="height">身高</string>
    <string name="base_stats">种族值</string>
    <string name="hp">血量</string>
    <string name="atk">攻击</string>
    <string name="def">防御</string>
    <string name="sp_atk">特攻</string>
    <string name="sp_def">特防</string>
    <string name="spd">速度</string>
    <string name="save_image">保存图片</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="version_1">红/绿/蓝</string>
    <string name="version_2">黄</string>
    <string name="version_3">金/银</string>
    <string name="version_4">水晶</string>
    <string name="version_5">红宝石/蓝宝石</string>
    <string name="version_6">绿宝石</string>
    <string name="version_7">火红/叶绿</string>
    <string name="version_8">珍珠/钻石</string>
    <string name="version_9">白金</string>
    <string name="version_10">心金/魂银</string>
    <string name="version_11">黑/白</string>
    <string name="version_12">圆形竞技场</string>
    <string name="version_13">XD暗之旋风黑暗洛奇亚</string>
    <string name="version_14">黑2/白2</string>
    <string name="version_15">x/y</string>
    <string name="version_16">Ω红宝石/α蓝宝石</string>
    <string name="version_17">日/月</string>
    <string name="version_18">究极之日/究极之月</string>
    <string name="version_19">Let\'s Go</string>
    <string name="version_20">剑/盾</string>
    <string name="type_fighting">格斗</string>
    <string name="type_flying">飞行</string>
    <string name="type_poison">毒</string>
    <string name="type_ground">地面</string>
    <string name="type_rock">岩石</string>
    <string name="type_bug">虫</string>
    <string name="type_ghost">鬼</string>
    <string name="type_steel">钢</string>
    <string name="type_fire">火</string>
    <string name="type_water">水</string>
    <string name="type_grass">草</string>
    <string name="type_electric">电</string>
    <string name="type_psychic">超能</string>
    <string name="type_ice">冰</string>
    <string name="type_dragon">龙</string>
    <string name="type_fairy">妖精</string>
    <string name="type_dark">恶</string>
    <string name="type_normal">正常</string>
    <string name="type_unknown">/???</string>
    <string name="damage_class_1">变化</string>
    <string name="damage_class_2">物理</string>
    <string name="damage_class_3">特殊</string>
    <string name="pokemon_name_0">妙蛙种子</string>
    <string name="pokemon_name_1">妙蛙种子</string>
    <string name="pokemon_name_2">妙蛙草</string>
    <string name="pokemon_name_3">妙蛙花</string>
    <string name="pokemon_name_4">小火龙</string>
    <string name="pokemon_name_5">火恐龙</string>
    <string name="pokemon_name_6">喷火龙</string>
    <string name="pokemon_name_7">杰尼龟</string>
    <string name="pokemon_name_8">卡咪龟</string>
    <string name="pokemon_name_9">水箭龟</string>
    <string name="pokemon_name_10">绿毛虫</string>
    <string name="pokemon_name_11">铁甲蛹</string>
    <string name="pokemon_name_12">巴大蝶</string>
    <string name="pokemon_name_13">独角虫</string>
    <string name="pokemon_name_14">铁壳蛹</string>
    <string name="pokemon_name_15">大针蜂</string>
    <string name="pokemon_name_16">波波</string>
    <string name="pokemon_name_17">比比鸟</string>
    <string name="pokemon_name_18">大比鸟</string>
    <string name="pokemon_name_19">小拉达</string>
    <string name="pokemon_name_20">拉达</string>
    <string name="pokemon_name_21">烈雀</string>
    <string name="pokemon_name_22">大嘴雀</string>
    <string name="pokemon_name_23">阿柏蛇</string>
    <string name="pokemon_name_24">阿柏怪</string>
    <string name="pokemon_name_25">皮卡丘</string>
    <string name="pokemon_name_26">雷丘</string>
    <string name="pokemon_name_27">穿山鼠</string>
    <string name="pokemon_name_28">穿山王</string>
    <string name="pokemon_name_29">尼多兰</string>
    <string name="pokemon_name_30">尼多娜</string>
    <string name="pokemon_name_31">尼多后</string>
    <string name="pokemon_name_32">尼多朗</string>
    <string name="pokemon_name_33">尼多力诺</string>
    <string name="pokemon_name_34">尼多王</string>
    <string name="pokemon_name_35">皮皮</string>
    <string name="pokemon_name_36">皮可西</string>
    <string name="pokemon_name_37">六尾</string>
    <string name="pokemon_name_38">九尾</string>
    <string name="pokemon_name_39">胖丁</string>
    <string name="pokemon_name_40">胖可丁</string>
    <string name="pokemon_name_41">超音蝠</string>
    <string name="pokemon_name_42">大嘴蝠</string>
    <string name="pokemon_name_43">走路草</string>
    <string name="pokemon_name_44">臭臭花</string>
    <string name="pokemon_name_45">霸王花</string>
    <string name="pokemon_name_46">派拉斯</string>
    <string name="pokemon_name_47">派拉斯特</string>
    <string name="pokemon_name_48">毛球</string>
    <string name="pokemon_name_49">摩鲁蛾</string>
    <string name="pokemon_name_50">地鼠</string>
    <string name="pokemon_name_51">三地鼠</string>
    <string name="pokemon_name_52">喵喵</string>
    <string name="pokemon_name_53">猫老大</string>
    <string name="pokemon_name_54">可达鸭</string>
    <string name="pokemon_name_55">哥达鸭</string>
    <string name="pokemon_name_56">猴怪</string>
    <string name="pokemon_name_57">火暴猴</string>
    <string name="pokemon_name_58">卡蒂狗</string>
    <string name="pokemon_name_59">风速狗</string>
    <string name="pokemon_name_60">蚊香蝌蚪</string>
    <string name="pokemon_name_61">蚊香君</string>
    <string name="pokemon_name_62">蚊香泳士</string>
    <string name="pokemon_name_63">凯西</string>
    <string name="pokemon_name_64">勇基拉</string>
    <string name="pokemon_name_65">胡地</string>
    <string name="pokemon_name_66">腕力</string>
    <string name="pokemon_name_67">豪力</string>
    <string name="pokemon_name_68">怪力</string>
    <string name="pokemon_name_69">喇叭芽</string>
    <string name="pokemon_name_70">口呆花</string>
    <string name="pokemon_name_71">大食花</string>
    <string name="pokemon_name_72">玛瑙水母</string>
    <string name="pokemon_name_73">毒刺水母</string>
    <string name="pokemon_name_74">小拳石</string>
    <string name="pokemon_name_75">隆隆石</string>
    <string name="pokemon_name_76">隆隆岩</string>
    <string name="pokemon_name_77">小火马</string>
    <string name="pokemon_name_78">烈焰马</string>
    <string name="pokemon_name_79">呆呆兽</string>
    <string name="pokemon_name_80">呆壳兽</string>
    <string name="pokemon_name_81">小磁怪</string>
    <string name="pokemon_name_82">三合一磁怪</string>
    <string name="pokemon_name_83">大葱鸭</string>
    <string name="pokemon_name_84">嘟嘟</string>
    <string name="pokemon_name_85">嘟嘟利</string>
    <string name="pokemon_name_86">小海狮</string>
    <string name="pokemon_name_87">白海狮</string>
    <string name="pokemon_name_88">臭泥</string>
    <string name="pokemon_name_89">臭臭泥</string>
    <string name="pokemon_name_90">大舌贝</string>
    <string name="pokemon_name_91">刺甲贝</string>
    <string name="pokemon_name_92">鬼斯</string>
    <string name="pokemon_name_93">鬼斯通</string>
    <string name="pokemon_name_94">耿鬼</string>
    <string name="pokemon_name_95">大岩蛇</string>
    <string name="pokemon_name_96">催眠貘</string>
    <string name="pokemon_name_97">引梦貘人</string>
    <string name="pokemon_name_98">大钳蟹</string>
    <string name="pokemon_name_99">巨钳蟹</string>
    <string name="pokemon_name_100">霹雳电球</string>
    <string name="pokemon_name_101">顽皮雷弹</string>
    <string name="pokemon_name_102">蛋蛋</string>
    <string name="pokemon_name_103">椰蛋树</string>
    <string name="pokemon_name_104">卡拉卡拉</string>
    <string name="pokemon_name_105">嘎啦嘎啦</string>
    <string name="pokemon_name_106">飞腿郎</string>
    <string name="pokemon_name_107">快拳郎</string>
    <string name="pokemon_name_108">大舌头</string>
    <string name="pokemon_name_109">瓦斯弹</string>
    <string name="pokemon_name_110">双弹瓦斯</string>
    <string name="pokemon_name_111">独角犀牛</string>
    <string name="pokemon_name_112">钻角犀兽</string>
    <string name="pokemon_name_113">吉利蛋</string>
    <string name="pokemon_name_114">蔓藤怪</string>
    <string name="pokemon_name_115">袋兽</string>
    <string name="pokemon_name_116">墨海马</string>
    <string name="pokemon_name_117">海刺龙</string>
    <string name="pokemon_name_118">角金鱼</string>
    <string name="pokemon_name_119">金鱼王</string>
    <string name="pokemon_name_120">海星星</string>
    <string name="pokemon_name_121">宝石海星</string>
    <string name="pokemon_name_122">魔墙人偶</string>
    <string name="pokemon_name_123">飞天螳螂</string>
    <string name="pokemon_name_124">迷唇姐</string>
    <string name="pokemon_name_125">电击兽</string>
    <string name="pokemon_name_126">鸭嘴火兽</string>
    <string name="pokemon_name_127">凯罗斯</string>
    <string name="pokemon_name_128">肯泰罗</string>
    <string name="pokemon_name_129">鲤鱼王</string>
    <string name="pokemon_name_130">暴鲤龙</string>
    <string name="pokemon_name_131">拉普拉斯</string>
    <string name="pokemon_name_132">百变怪</string>
    <string name="pokemon_name_133">伊布</string>
    <string name="pokemon_name_134">水伊布</string>
    <string name="pokemon_name_135">雷伊布</string>
    <string name="pokemon_name_136">火伊布</string>
    <string name="pokemon_name_137">多边兽</string>
    <string name="pokemon_name_138">菊石兽</string>
    <string name="pokemon_name_139">多刺菊石兽</string>
    <string name="pokemon_name_140">化石盔</string>
    <string name="pokemon_name_141">镰刀盔</string>
    <string name="pokemon_name_142">化石翼龙</string>
    <string name="pokemon_name_143">卡比兽</string>
    <string name="pokemon_name_144">急冻鸟</string>
    <string name="pokemon_name_145">闪电鸟</string>
    <string name="pokemon_name_146">火焰鸟</string>
    <string name="pokemon_name_147">迷你龙</string>
    <string name="pokemon_name_148">哈克龙</string>
    <string name="pokemon_name_149">快龙</string>
    <string name="pokemon_name_150">超梦</string>
    <string name="pokemon_name_151">梦幻</string>
    <string name="pokemon_name_152">菊草叶</string>
    <string name="pokemon_name_153">月桂叶</string>
    <string name="pokemon_name_154">大竺葵</string>
    <string name="pokemon_name_155">火球鼠</string>
    <string name="pokemon_name_156">火岩鼠</string>
    <string name="pokemon_name_157">火暴兽</string>
    <string name="pokemon_name_158">小锯鳄</string>
    <string name="pokemon_name_159">蓝鳄</string>
    <string name="pokemon_name_160">大力鳄</string>
    <string name="pokemon_name_161">尾立</string>
    <string name="pokemon_name_162">大尾立</string>
    <string name="pokemon_name_163">咕咕</string>
    <string name="pokemon_name_164">猫头夜鹰</string>
    <string name="pokemon_name_165">芭瓢虫</string>
    <string name="pokemon_name_166">安瓢虫</string>
    <string name="pokemon_name_167">圆丝蛛</string>
    <string name="pokemon_name_168">阿利多斯</string>
    <string name="pokemon_name_169">叉字蝠</string>
    <string name="pokemon_name_170">灯笼鱼</string>
    <string name="pokemon_name_171">电灯怪</string>
    <string name="pokemon_name_172">皮丘</string>
    <string name="pokemon_name_173">皮宝宝</string>
    <string name="pokemon_name_174">宝宝丁</string>
    <string name="pokemon_name_175">波克比</string>
    <string name="pokemon_name_176">波克基古</string>
    <string name="pokemon_name_177">天然雀</string>
    <string name="pokemon_name_178">天然鸟</string>
    <string name="pokemon_name_179">咩利羊</string>
    <string name="pokemon_name_180">茸茸羊</string>
    <string name="pokemon_name_181">电龙</string>
    <string name="pokemon_name_182">美丽花</string>
    <string name="pokemon_name_183">玛力露</string>
    <string name="pokemon_name_184">玛力露丽</string>
    <string name="pokemon_name_185">树才怪</string>
    <string name="pokemon_name_186">蚊香蛙皇</string>
    <string name="pokemon_name_187">毽子草</string>
    <string name="pokemon_name_188">毽子花</string>
    <string name="pokemon_name_189">毽子棉</string>
    <string name="pokemon_name_190">长尾怪手</string>
    <string name="pokemon_name_191">向日种子</string>
    <string name="pokemon_name_192">向日花怪</string>
    <string name="pokemon_name_193">蜻蜻蜓</string>
    <string name="pokemon_name_194">乌波</string>
    <string name="pokemon_name_195">沼王</string>
    <string name="pokemon_name_196">太阳伊布</string>
    <string name="pokemon_name_197">月亮伊布</string>
    <string name="pokemon_name_198">黑暗鸦</string>
</resources>